--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,11 @@
-<% name = current_user.present? ? current_user.email : 'Stranger' %>
+<h1>Articles</h1>
 
-<h1>Welcome, <%= name %> </h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<ul>
+	<% @articles.each do |article| %>
+		<li>
+			<h3><%= link_to article.title, user_article_path(article.user_id, article.id) %></h3>
+		</li>
+	<% end %>
+</ul>
+
+
